--- a/exp/8120HTb/8120HTb.yml
+++ b/exp/8120HTb/8120HTb.yml
@@ -12,12 +12,12 @@ experiment:
   name: "exp"
   type: "HyperparameterTuning"
   tags: [ "austero" ]
-  requires:   [ "8120TSa" ]
+  requires:   [ "8120TSb" ]
 
 
 param:
   algoritmo:  "lightgbm"
-  semilla: 102191
+  semilla: 442837
   crossvalidation: FALSE
   crossvalidation_folds: 5
   validate: FALSE
@@ -36,8 +36,8 @@ param:
     num_leaves:         [ 16, 1024, "integer" ]
     min_data_in_leaf:   [  0, 8000, "integer" ]
 
-    lambda_l1:  0                    # [ 0  ,  10]
-    lambda_l2:  0                    # [ 0  , 200]
+    lambda_l1:  0                    # [ 0  ,  15]
+    lambda_l2:  0                    # [ 0  , 250]
     min_gain_to_split: 0             # [ 0  ,  20]
     bagging_fraction: 1.0            # [ 0.2,   1.0 ]
 
@@ -68,7 +68,7 @@ param:
 
   #Optimizacion Bayesiana
   BO:
-    iterations:  50                  #cantidad de iteraciones
+    iterations:  60                  #cantidad de iteraciones
 
     noisy: TRUE
     minimize: FALSE
