--- a/exp/8120FEc/8120FEc.yml
+++ b/exp/8120FEc/8120FEc.yml
@@ -7,7 +7,7 @@ googlecloud:
 
 
 experiment:
-  script: "src/completo/z913_FE_UTN.r"
+  script: "src/completo/z912_FE_UTN.r"
   restart: FALSE
   name: "exp"
   type: "FeatureEngineering"
@@ -16,18 +16,11 @@ experiment:
 
   requires: [ "DT0001" ]
 
-randomforest: #crea variables {0,1} con las hojas de un random forest, atención que explota
-  correr: TRUE
-  num.trees: 50
-  max.depth: 6
-  min.node.size: 500
-  mtry: 13
-
 
 param:
-  dummiesNA: FALSE  #si la variable tiene nulos, agrega una variable dummy que indica +[0,1] si es nulo o no
+  dummiesNA: TRUE  #si la variable tiene nulos, agrega una variable dummy que indica +[0,1] si es nulo o no
 
-  corregir: "AsignarNA"     #  Repara las variables rotas { "NO", "ClaudioCastillo", "AsignarNA" }
+  corregir: "NO"     #  Repara las variables rotas { "NO", "ClaudioCastillo", "AsignarNA" }
   variablesdrift: [ ] #Variables a aeliminar
   
   variablesmanuales: FALSE   #NO SE AGREGAN VARIABLES MANUALES
