--- a/exp/8120HBd/8120HBd.yml
+++ b/exp/8120HBd/8120HBd.yml
@@ -13,7 +13,7 @@ experiment:
   type: "hybridisation"
   tags: [ "hybrid" ]
   description: "Hibridacion de Semillerios"
-  requires:   [ "8120ZZb", "8120ZZc", "8121ZZa" ]  
+  requires:   [ "8101ZZc", "8120ZZa"]  
 
 param:
   KA_start:  9000
