--- a/exp/8124FEa/8124FEa.yml
+++ b/exp/8124FEa/8124FEa.yml
@@ -20,7 +20,7 @@ experiment:
 param:
   dummiesNA: TRUE  #si la variable tiene nulos, agrega una variable dummy que indica +[0,1] si es nulo o no
 
-  corregir: "AsignarNA"     #  Repara las variables rotas { "NO", "ClaudioCastillo", "AsignarNA" }
+  corregir: "ClaudioCastillo"     #  Repara las variables rotas { "NO", "ClaudioCastillo", "AsignarNA" }
   variablesdrift: [ ] #Variables a aeliminar
   
   variablesmanuales: TRUE   #SE AGREGAN VARIABLES MANUALES
@@ -33,7 +33,7 @@ param:
     correr:    [  TRUE,  TRUE, TRUE, TRUE, TRUE, TRUE ]  #si se corre el lag
     lag:       [     1,      2,     3,     4,     5,     6 ]  #orden del lag
     delta:     [  TRUE,  TRUE, TRUE, TRUE, TRUE, TRUE ]  #solo se activa si correr=TRUE 
-    canaritos: [   0.1,    0.1,   0.1,   0.1,   0.1,   0.1 ]  #porcentaje de canaritos asesinos, del total de columnas del dataset, 0 indica NO reducir campos por canaritos
+    canaritos: [   0.2,    0.2,   0.2,   0.2,   0.2,   0.2 ]  #porcentaje de canaritos asesinos, del total de columnas del dataset, 0 indica NO reducir campos por canaritos
 
 
   tendenciaYmuchomas:  #todos FALSE
@@ -52,7 +52,7 @@ param:
 
   rankeador: TRUE
 
-  canaritos_final: 0.2   #si es CERO entonces no hace el filtrado final por canaritos
+  canaritos_final: 0.3   #si es CERO entonces no hace el filtrado final por canaritos
 
   files:
     input:
